--- a/spanish-app/public/index.html
+++ b/spanish-app/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Masblo"
-      content="Learn Spanish and Practice your skills with fun learning games."
+      content="A FREE way to learn Spanish and practice your skills with fun learning games."
     />
+    <meta name="description" content="Masblo.com is a free and fun Spanish learning app to help you master new vocabulary, grammar, and pronunciation. Start your first lesson today!">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
